8170544: Fix code scan findings in libnet

Reviewed-by: goetz, chegar